--- a/HackingWithSwift - Project10/Base.lproj/Main.storyboard
+++ b/HackingWithSwift - Project10/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Person" id="huF-kx-rUQ">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Person" id="huF-kx-rUQ" customClass="PersonCell" customModule="HackingWithSwift___Project10" customModuleProvider="target">
                                 <rect key="frame" x="10" y="10" width="140" height="180"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -50,6 +50,10 @@
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="imageView" destination="Tx8-md-kG8" id="EAf-2p-qsI"/>
+                                    <outlet property="name" destination="clV-Y8-IxU" id="Gny-Ng-Jaq"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
